Use X11/XWayland only
Temporary workaround while we investigate https://github.com/flathub/org.freeorion.FreeOrion/issues/3

--- a/org.freeorion.FreeOrion.yaml
+++ b/org.freeorion.FreeOrion.yaml
@@ -9,9 +9,8 @@ finish-args:
   - --device=dri
   - --share=ipc
   - --share=network
-  - --socket=fallback-x11
+  - --socket=x11
   - --socket=pulseaudio
-  - --socket=wayland
 
 cleanup:
   - /include
