Enable pre-releases for the beta branch

--- a/org.freeorion.FreeOrion.yaml
+++ b/org.freeorion.FreeOrion.yaml
@@ -47,5 +47,5 @@ modules:
         x-checker-data:
           type: anitya
           project-id: 12152
-          stable-only: true
+          stable-only: false
           url-template: https://github.com/freeorion/freeorion/archive/v$version.tar.gz
